Add comprehensive SEO improvements and fix footer heading
- Add Open Graph meta tags for social media sharing
- Add Twitter Card meta tags
- Add canonical URLs to prevent duplicate content
- Add JSON-LD structured data (Organization, WebSite, Product, SoftwareApplication)
- Create PWA manifest for progressive web app support
- Add og-image.png for social sharing preview
- Fix robots.txt sitemap URL (cooltrack.com -> cooltrack.co)
- Update footer heading from 'Location & Contact' to 'Contact' for accuracy
- Add DNS prefetch hints for performance optimization

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -14,7 +14,7 @@
   translation: Quick Links
 
 - id: location_contact
-  translation: Location & Contact
+  translation: Contact
 
 - id: recent_posts
   translation: Recent Posts by
